--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <a href="http://www.rottentomatoes.com/celebrity/nicolas_cage/"> Rotten Tomatoes,</a> 
                 <a href="http://www.google.com/trends/explore?hl=en-US#q=%22nic+cage%22"> Google Trends: Cage.</a><br>
                  <h4>What I can learn from this project:</h4> 
-                 Excel, Javascript, D3, How to find the right data I need.
+                 Excel, Javascript, Jqury, How to select the right data I need.
                   <br>
                  <h4>Where I could pitch this project to ? </h4>
                  Esquire, GQ, The guardian, Fast Company (maybe?), New York Times and New York Magazine.
@@ -131,33 +131,32 @@
         <!-- Third Featurette -->
         <div class="featurette" id="contact">
             
-            <h2 class="featurette-heading">The wealth inequality on Park Ave, NY
+            <h2 class="featurette-heading"> U.S. customer returns and fraud rate in retail store
             </h2>
             <p class="lead">
 
-            Rencently, I saw an Documentary, "Park Avenue: money, power and the American dream". I only moved to this city for 3 years. Before NY, I never lived in US. Yet, everyday when I walk on street, the wealth inequality scene still shocking me.<br><br>
+                As a girl lives in NYC, I shopping a lot and I retuen stuffs. I never think it's a wrong thing to do but I also curious how the system works. Also, the relationship between the sale and returns.<br><br>
 
-            I'm not sure about how difficult this project would be. Park ave is the most of the road's length in Manhattan. It starts on Astor Place/Cooper Square to 132nd Street in Manhattan. Then starts on Major Deegan Expressway to Fordham Road in the Bronx.<a href="http://en.wikipedia.org/wiki/Park_Avenue">[Link]</a><br><br>
+                So I found a report from the National Retail Federation. <a herf="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=2&cad=rja&uact=8&ved=0CCgQFjAB&url=http%3A%2F%2Fwww.theretailequation.com%2FRetailers%2Fimages%2Fpublic%2Fpdfs%2Findustry_reports%2FTRE3013_NRF_Retail_Returns_Survey_Canada_2013.pdf&ei=PQ5YVLu8D6-BsQTSr4JA&usg=AFQjCNGjwna-s35-mrDPe_pGHuzI3ePhXA&bvm=bv.78677474,d.cWc
+                "> [Link] </a> 
 
-            I would do a demographic research. Finding out the poverty gap. And get the data from real estate price. It would be interesting to put the result on the real map and  see how the data changing intensely.
-            </p>
+                It's interesting to see which state got the highest return rate and compare it to the nationwide retail sale, how much impact it would make to the retail industry. Also, the percentage of fraudulent returns over the country. Might be interesting if I can add another piece of data, such as unemployment and see if they correlate. If they don't, that would be interesting. 
 
                 <h4>My Goal : </h4>
                 <p>1. Createing an interactive map 
                 <br>
-                2. Find out the data of the the house price might be the easiest way for me. I feel there would be some challenges of getting the data of average property</p><br>
+                2. Finding out the OTHER data, playing with the fraudulent returns </p><br>
 
                 <h4>Example of Data Sources :</h4>
                 <a href="http://www.census.gov/"> Census </a>,
-                <a href="hhttps://www.youtube.com/watch?v=6niWzomA_So">Park Avenue: money, power and the American dream, </a>
-                <a href="http://www.trulia.com/real_estate/New_York-New_York/"> Trulia,</a> 
+                <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=2&cad=rja&uact=8&ved=0CCgQFjAB&url=http%3A%2F%2Fwww.theretailequation.com%2FRetailers%2Fimages%2Fpublic%2Fpdfs%2Findustry_reports%2FTRE3013_NRF_Retail_Returns_Survey_Canada_2013.pdf&ei=PQ5YVLu8D6-BsQTSr4JA&usg=AFQjCNGjwna-s35-mrDPe_pGHuzI3ePhXA&bvm=bv.78677474,d.cWc"> 2013 Consumer Returns in the Retail Industry</a>
+               
                  <br>
                   <h4>What I can learn from this project:</h4> 
-                 Javascript, D3, How to find the right data I need.
-
+                 Javascript, D3, Jqury.
                  <br> 
                  <h4>Where I could pitch this project to ? </h4>
-                 The guardian, New York Times, Huffington post and New York Magazine.
+                New York Times, Huffington post,The guardian.
                 <br>
                 <br>
                 <br>
